Extend the POC, add support for docker registries

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,11 @@ anyhow = "*"
 env_logger = "*"
 futures = "*"
 http = "*"
+lazy_static = "*"
 log = "*"
 nix = "*"
 openssl = "*"
+regex = "*"
 sha-1 = "*"
 thiserror = "*"
 tokio = { version = "*", features = ["full"] }
