Update cargo config and lock

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ futures = "*"
 http = "*"
 lazy_static = "*"
 log = "*"
-nix = "*"
+nix = { version = "*", features = ["fs"] }
 openssl = "*"
 regex = "*"
 sha-1 = "*"
